--- a/src/app/modules/pages/listar/listar.component.scss
+++ b/src/app/modules/pages/listar/listar.component.scss
@@ -1,29 +1,3 @@
-.container {
-  position: relative; /* Cambiado de fixed a absolute */
-  bottom: 8px; /* Espacio desde el fondo de la página */
-  right: 0;
-  left: 0;
-
-  display: flex;
-  flex-direction: column;
-  height: auto; /* Cambiado a auto para que el contenedor ajuste su altura */
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 1rem;
-  background-color: white ;
-  border: 1px solid rgba(0, 0, 0, 0.474);
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.2);
-  border-bottom: none;
-  color: black;
-  border-radius: 10px;
-  
-
-  h1 {
-    font-size: 26px;
-    align-self: center;
-  }
-}
-
 .todo-list {
   margin: 1rem 0;
   width: 100%;
@@ -57,4 +31,14 @@
   border: 1px solid rgba(0, 0, 0, 0.474);
 }
 
+.container {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+h1 {
+  text-align: center; // Centra el texto del h1
+}
 
