--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
 .container {
-  position: relative; /* Cambiado de fixed a absolute */
-  bottom: 8px; /* Espacio desde el fondo de la página */
+  position: relative; 
+  bottom: 8px; 
   right: 0;
   left: 0;
 
   display: flex;
   flex-direction: column;
-  height: auto; /* Cambiado a auto para que el contenedor ajuste su altura */
+  height: auto; 
   max-width: 1000px;
   margin: 0 auto;
   padding: 1rem;
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  overflow-y: auto; /* Permite el scroll en la lista */
+  overflow-y: auto; 
   
 }
 
