--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,7 +17,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 section {
-  margin-bottom: 2rem; /* Ajusta el valor según necesites */
+  margin-bottom: 2rem; 
 }
 
 
